Organize source into src and lib folders

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<script src=perlin.js></script>
-<script src=texturegen.js></script>
-<script src=TextureGen.js></script>
-<script src=NodeManager.js></script>
-<script src=BaseNode.js></script>
-<script src=ColorNode.js></script>
-<script src=CanvasNode.js></script>
-<script src=FillNode.js></script>
+<script src=lib/perlin.js></script>
+<script src=src/texturegen.js></script>
+<script src=src/TextureGen.js></script>
+<script src=src/NodeManager.js></script>
+<script src=src/BaseNode.js></script>
+<script src=src/ColorNode.js></script>
+<script src=src/CanvasNode.js></script>
+<script src=src/FillNode.js></script>
 
 <div id=editor>
 </div>
