--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src=lib/interact.js></script>
 <script src=lib/perlin.js></script>
 <script src=src/texturegen.js></script>
 <script src=src/TextureGen.js></script>
