--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel=stylesheet type=text/css href=res/master.css>
 <script src=lib/interact.js></script>
 <script src=lib/perlin.js></script>
 <script src=src/texturegen.js></script>
@@ -11,28 +12,6 @@
 
 <div id=editor>
 </div>
-
-<style>
-
-  html, body {
-    background: #efefef;
-    font-family: Arial;
-  }
-
-  .node {
-    border: 1px solid #ccc;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-    background: white;
-    padding: 15px;
-    display: inline-block;
-    margin: 15px;
-  }
-
-  .node canvas {
-    width: 128px;
-  }
-</style>
-
 
 <script>
 
