--- a/index.html
+++ b/index.html
@@ -34,4 +34,22 @@ interact('.input').dropzone({
 });
 
 
+interact('.node .title')
+  .draggable({
+    autoScroll: true,
+    onmove: dragMoveListener
+  });
+
+  function dragMoveListener (event) {
+    var target = event.target.parentElement;
+    var x = (parseFloat(target.getAttribute('data-x')) || 0) + event.dx;
+    var y = (parseFloat(target.getAttribute('data-y')) || 0) + event.dy;
+    target.style.webkitTransform =
+    target.style.transform =
+      'translate(' + x + 'px, ' + y + 'px)';
+    target.setAttribute('data-x', x);
+    target.setAttribute('data-y', y);
+  }
+
+
 </script>
