--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel=stylesheet type=text/css href=res/master.css>
 <script src=lib/interact.js></script>
 <script src=lib/perlin.js></script>
+<script src=lib/jscolor.js></script>
 <script src=src/texturegen.js></script>
 <script src=src/TextureGen.js></script>
 <script src=src/NodeManager.js></script>
