--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <script src=src/CanvasNode.js></script>
 <script src=src/FillNode.js></script>
 
+<a class="add-new-button">+</a>
+
 <div id=editor>
 </div>
 
@@ -52,5 +54,10 @@ interact('.node .title')
     target.setAttribute('data-y', y);
   }
 
+
+document.querySelector('.add-new-button').addEventListener('click', function() {
+  var nodeType = prompt('Node type?');
+  nodeManager.createNode(TextureGen[nodeType + 'Node']);
+});
 
 </script>
