--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src=src/ColorNode.js></script>
 <script src=src/CanvasNode.js></script>
 <script src=src/FillNode.js></script>
+<script src=src/PerlinNode.js></script>
 
 <a class="add-new-button">+</a>
 
