--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src=src/NodeManager.js></script>
 <script src=src/BaseNode.js></script>
 <script src=src/ColorNode.js></script>
+<script src=src/NumberNode.js></script>
 <script src=src/CanvasNode.js></script>
 <script src=src/FillNode.js></script>
 <script src=src/PerlinNode.js></script>
