--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script src=src/CanvasNode.js></script>
 <script src=src/FillNode.js></script>
 <script src=src/PerlinNode.js></script>
+<script src=src/AddNode.js></script>
 
 <div class=ui-button-container>
   <a class="export-button ui-button">Export</a>
