Add a slew of nodes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 <script src=src/PerlinNode.js></script>
 <script src=src/AddNode.js></script>
 <script src=src/MultiplyNode.js></script>
+<script src=src/RandomNode.js></script>
+<script src=src/SubtractNode.js></script>
+<script src=src/BlurNode.js></script>
+<script src=src/EmbossNode.js></script>
+<script src=src/MotionBlurNode.js></script>
+<script src=src/DistortXNode.js></script>
+<script src=src/ThresholdNode.js></script>
+<script src=src/CircularGradientNode.js></script>
+<script src=src/SineNode.js></script>
+<script src=src/CircularSineNode.js></script>
+<script src=src/PolarNode.js></script>
 
 <div class=ui-button-container>
   <a class="export-button ui-button">Export</a>
