--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <link rel=stylesheet type=text/css href=res/master.css>
 <script src=lib/interact.js></script>
+<script src=lib/three.js></script>
 <script src=lib/perlin.js></script>
 <script src=lib/jscolor.js></script>
 <script src=src/texturegen.js></script>
