--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script src=src/SineNode.js></script>
 <script src=src/CircularSineNode.js></script>
 <script src=src/PolarNode.js></script>
+<script src=src/CubePreviewNode.js></script>
 
 <div class=ui-button-container>
   <a class="export-button ui-button">Export</a>
@@ -37,6 +38,7 @@
     <li data-type=CircularGradientNode>CircularGradient</li>
     <li data-type=CircularSineNode>CircularSine</li>
     <li data-type=ColorNode>Color</li>
+    <li data-type=CubePreviewNode>CubePreview</li>
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
     <li data-type=FillNode>Fill</li>
