Make nodes resizable

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@ var nodeManager = new TextureGen.NodeManager(editor);
 
 interact('.output').draggable({autoScroll: true});
 
+interact('.node').resizable({
+  edges: {bottom: false, left: true, right: true, top: false}
+}).on('resizemove', function (event) {
+    var target = event.target;
+    var x = (parseFloat(target.dataset.x) || 0);
+
+    target.style.width  = event.rect.width + 'px';
+
+    x += event.deltaRect.left;
+    target.style.left = x + 'px';
+    target.dataset.x = x;
+  });
+
 interact('.input').dropzone({
   accept: '.output',
   ondrop: function (event) {
