--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src=lib/three.js></script>
 <script src=lib/perlin.js></script>
 <script src=lib/jscolor.js></script>
-<script src=src/texturegen.js></script>
+<script src=src/texturegen-core.js></script>
 <script src=src/TextureGen.js></script>
 <script src=src/NodeManager.js></script>
 <script src=src/BaseNode.js></script>
