Specify utf8 as character encoding
This fixes #2.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset=utf8>
 <link rel=stylesheet type=text/css href=res/master.css>
 <script src=lib/interact.js></script>
 <script src=lib/three.js></script>
