--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <script src=src/SineNode.js></script>
 <script src=src/CircularSineNode.js></script>
 <script src=src/PolarNode.js></script>
+<script src=src/CheckerNode.js></script>
 <script src=src/CubePreviewNode.js></script>
 
 <div class=ui-button-container>
@@ -35,6 +36,7 @@
   <ul class=node-classes-container>
     <li data-type=AddNode>Add</li>
     <li data-type=BlurNode>Blur</li>
+    <li data-type=CheckerNode>Checker</li>
     <li data-type=CircularGradientNode>CircularGradient</li>
     <li data-type=CircularSineNode>CircularSine</li>
     <li data-type=ColorNode>Color</li>
