Implement rotate node
It supports rotating an image in 90-degree increments, with an optional
repeat parameter specifying number of rotations.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <script src=src/CircularSineNode.js></script>
 <script src=src/PolarNode.js></script>
 <script src=src/CheckerNode.js></script>
+<script src=src/RotateNode.js></script>
 <script src=src/CubePreviewNode.js></script>
 
 <div class=ui-button-container>
@@ -51,6 +52,7 @@
     <li data-type=PerlinNode>Perlin</li>
     <li data-type=PolarNode>Polar</li>
     <li data-type=RandomNode>Random</li>
+    <li data-type=RotateNode>Rotate</li>
     <li data-type=SineNode>Sine</li>
     <li data-type=SubtractNode>Subtract</li>
     <li data-type=ThresholdNode>Threshold</li>
