--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src=src/PerlinNode.js></script>
 <script src=src/AddNode.js></script>
 <script src=src/MultiplyNode.js></script>
+<script src=src/MaskNode.js></script>
 <script src=src/RandomNode.js></script>
 <script src=src/SubtractNode.js></script>
 <script src=src/BlurNode.js></script>
@@ -46,6 +47,7 @@
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
     <li data-type=FillNode>Fill</li>
+    <li data-type=MaskNode>Mask</li>
     <li data-type=MotionBlurNode>MotionBlur</li>
     <li data-type=MultiplyNode>Multiply</li>
     <li data-type=NumberNode>Number</li>
