Add colorization via gradients

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <script src=src/CanvasNode.js></script>
 <script src=src/FillNode.js></script>
 <script src=src/PerlinNode.js></script>
+<script src=src/GradientNode.js></script>
+<script src=src/ColorizeNode.js></script>
 <script src=src/AddNode.js></script>
 <script src=src/MultiplyNode.js></script>
 <script src=src/MaskNode.js></script>
@@ -43,10 +45,12 @@
     <li data-type=CircularGradientNode>CircularGradient</li>
     <li data-type=CircularSineNode>CircularSine</li>
     <li data-type=ColorNode>Color</li>
+    <li data-type=ColorizeNode>Colorize</li>
     <li data-type=CubePreviewNode>CubePreview</li>
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
     <li data-type=FillNode>Fill</li>
+    <li data-type=GradientNode>Gradient</li>
     <li data-type=MaskNode>Mask</li>
     <li data-type=MotionBlurNode>MotionBlur</li>
     <li data-type=MultiplyNode>Multiply</li>
