--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src=src/TextureGen.js></script>
 <script src=src/BaseValue.js></script>
 <script src=src/ColorValue.js></script>
+<script src=src/GradientValue.js></script>
 <script src=src/NodeManager.js></script>
 <script src=src/BaseNode.js></script>
 <script src=src/ColorNode.js></script>
