--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <script src=src/ColorNode.js></script>
 <script src=src/NumberNode.js></script>
 <script src=src/CanvasNode.js></script>
-<script src=src/FillNode.js></script>
 <script src=src/PerlinNode.js></script>
 <script src=src/GradientNode.js></script>
 <script src=src/ColorizeNode.js></script>
 <script src=src/AddNode.js></script>
+<script src=src/RectNode.js></script>
 <script src=src/MultiplyNode.js></script>
 <script src=src/MaskNode.js></script>
 <script src=src/RandomNode.js></script>
@@ -52,7 +52,6 @@
     <li data-type=CubePreviewNode>CubePreview</li>
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
-    <li data-type=FillNode>Fill</li>
     <li data-type=GradientNode>Gradient</li>
     <li data-type=MaskNode>Mask</li>
     <li data-type=MotionBlurNode>MotionBlur</li>
@@ -61,6 +60,7 @@
     <li data-type=PerlinNode>Perlin</li>
     <li data-type=PolarNode>Polar</li>
     <li data-type=RandomNode>Random</li>
+    <li data-type=RectNode>Rect</li>
     <li data-type=RotateNode>Rotate</li>
     <li data-type=SineNode>Sine</li>
     <li data-type=SubtractNode>Subtract</li>
