Add LoadStore functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src=src/GradientValue.js></script>
 <script src=src/NodeManager.js></script>
 <script src=src/BaseNode.js></script>
+<script src=src/LoadStoreNode.js></script>
 <script src=src/ColorNode.js></script>
 <script src=src/NumberNode.js></script>
 <script src=src/CanvasNode.js></script>
@@ -61,6 +62,7 @@
     <li data-type=EmbossNode>Emboss</li>
     <li data-type=GradientNode>Gradient</li>
     <li data-type=InvertNode>Invert</li>
+    <li data-type=LoadStoreNode>LoadStore</li>
     <li data-type=MaskNode>Mask</li>
     <li data-type=MotionBlurNode>MotionBlur</li>
     <li data-type=MultiplyNode>Multiply</li>
