--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src=src/GradientNode.js></script>
 <script src=src/ColorizeNode.js></script>
 <script src=src/AddNode.js></script>
+<script src=src/RotozoomNode.js></script>
 <script src=src/RectNode.js></script>
 <script src=src/MultiplyNode.js></script>
 <script src=src/MaskNode.js></script>
@@ -64,6 +65,7 @@
     <li data-type=RandomNode>Random</li>
     <li data-type=RectNode>Rect</li>
     <li data-type=RotateNode>Rotate</li>
+    <li data-type=RotozoomNode>Rotozoom</li>
     <li data-type=SineNode>Sine</li>
     <li data-type=SubtractNode>Subtract</li>
     <li data-type=ThresholdNode>Threshold</li>
