Add support for multiple geometries in 3D preview
Use a dropdown to select between Box, Sphere, Cylinder, Torus and
TorusKnot.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src=src/TextureGen.js></script>
 <script src=src/BaseInput.js></script>
 <script src=src/NumberInput.js></script>
+<script src=src/ChoiceInput.js></script>
 <script src=src/GraphInput.js></script>
 <script src=src/BaseValue.js></script>
 <script src=src/ColorValue.js></script>
@@ -23,6 +24,7 @@
 <script src=src/LoadStoreNode.js></script>
 <script src=src/ColorNode.js></script>
 <script src=src/NumberNode.js></script>
+<script src=src/StringNode.js></script>
 <script src=src/CanvasNode.js></script>
 <script src=src/PerlinNode.js></script>
 <script src=src/GradientNode.js></script>
@@ -46,7 +48,7 @@
 <script src=src/CheckerNode.js></script>
 <script src=src/SwirlNode.js></script>
 <script src=src/InvertNode.js></script>
-<script src=src/CubePreviewNode.js></script>
+<script src=src/THREEPreviewNode.js></script>
 
 <div class=ui-button-container>
   <a class="export-button ui-button">Export</a>
@@ -60,7 +62,6 @@
     <li data-type=CircularSineNode>CircularSine</li>
     <li data-type=ColorNode>Color</li>
     <li data-type=ColorizeNode>Colorize</li>
-    <li data-type=CubePreviewNode>CubePreview</li>
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
     <li data-type=GradientNode>Gradient</li>
@@ -79,6 +80,7 @@
     <li data-type=SwirlNode>Swirl</li>
     <li data-type=SubtractNode>Subtract</li>
     <li data-type=ThresholdNode>Threshold</li>
+    <li data-type=THREEPreviewNode>THREEPreview</li>
   </ul>
 </div>
 
