--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <script src=src/PolarNode.js></script>
 <script src=src/CheckerNode.js></script>
 <script src=src/RotateNode.js></script>
+<script src=src/InvertNode.js></script>
 <script src=src/CubePreviewNode.js></script>
 
 <div class=ui-button-container>
@@ -53,6 +54,7 @@
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
     <li data-type=GradientNode>Gradient</li>
+    <li data-type=InvertNode>Invert</li>
     <li data-type=MaskNode>Mask</li>
     <li data-type=MotionBlurNode>MotionBlur</li>
     <li data-type=MultiplyNode>Multiply</li>
