--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <script src=src/CircularSineNode.js></script>
 <script src=src/PolarNode.js></script>
 <script src=src/CheckerNode.js></script>
+<script src=src/SwirlNode.js></script>
 <script src=src/InvertNode.js></script>
 <script src=src/CubePreviewNode.js></script>
 
@@ -75,6 +76,7 @@
     <li data-type=RectNode>Rect</li>
     <li data-type=RotozoomNode>Rotozoom</li>
     <li data-type=SineNode>Sine</li>
+    <li data-type=SwirlNode>Swirl</li>
     <li data-type=SubtractNode>Subtract</li>
     <li data-type=ThresholdNode>Threshold</li>
   </ul>
