Implement SobelNode. Include opencv.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src=lib/interact.js></script>
 <script src=lib/three.js></script>
 <script src=lib/perlin.js></script>
+<script src=lib/opencv.js></script>
 <script src=src/texturegen-core.js></script>
 <script src=src/TextureGen.js></script>
 <script src=src/BaseInput.js></script>
@@ -46,6 +47,7 @@
 <script src=src/SwirlNode.js></script>
 <script src=src/InvertNode.js></script>
 <script src=src/THREEPreviewNode.js></script>
+<script src=src/SobelNode.js></script>
 
 <div class=ui-button-container>
   <a class="save-button ui-button">Save</a>
@@ -74,6 +76,7 @@
     <li data-type=RectNode>Rect</li>
     <li data-type=RotozoomNode>Rotozoom</li>
     <li data-type=SineNode>Sine</li>
+    <li data-type=SobelNode>Sobel</li>
     <li data-type=SwirlNode>Swirl</li>
     <li data-type=ThresholdNode>Threshold</li>
     <li data-type=THREEPreviewNode>THREEPreview</li>
