Add BlendNode to replace add/sub/mul
This makes it easier to add new blending modes and faster to test
different blending modes on the same inputs.
BlendNode also includes 'normal' blending, which will use the alpha
value of the top level to determine blending.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
 <script src=src/PerlinNode.js></script>
 <script src=src/GradientNode.js></script>
 <script src=src/ColorizeNode.js></script>
-<script src=src/AddNode.js></script>
+<script src=src/BlendNode.js></script>
 <script src=src/RotozoomNode.js></script>
 <script src=src/RectNode.js></script>
-<script src=src/MultiplyNode.js></script>
 <script src=src/MaskNode.js></script>
 <script src=src/RandomNode.js></script>
-<script src=src/SubtractNode.js></script>
 <script src=src/BlurNode.js></script>
 <script src=src/EmbossNode.js></script>
 <script src=src/MotionBlurNode.js></script>
@@ -56,7 +54,7 @@
   <a class="import-button ui-button">Import</a>
   <a class="add-new-button ui-button">+</a>
   <ul class=node-classes-container>
-    <li data-type=AddNode>Add</li>
+    <li data-type=BlendNode>Blend</li>
     <li data-type=BlurNode>Blur</li>
     <li data-type=CheckerNode>Checker</li>
     <li data-type=CircularGradientNode>CircularGradient</li>
@@ -70,7 +68,6 @@
     <li data-type=LoadStoreNode>LoadStore</li>
     <li data-type=MaskNode>Mask</li>
     <li data-type=MotionBlurNode>MotionBlur</li>
-    <li data-type=MultiplyNode>Multiply</li>
     <li data-type=NumberNode>Number</li>
     <li data-type=PerlinNode>Perlin</li>
     <li data-type=PolarNode>Polar</li>
@@ -79,7 +76,6 @@
     <li data-type=RotozoomNode>Rotozoom</li>
     <li data-type=SineNode>Sine</li>
     <li data-type=SwirlNode>Swirl</li>
-    <li data-type=SubtractNode>Subtract</li>
     <li data-type=ThresholdNode>Threshold</li>
     <li data-type=THREEPreviewNode>THREEPreview</li>
   </ul>
