--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <script src=src/CubePreviewNode.js></script>
 
 <div class=ui-button-container>
+  <a class="save-button ui-button">Save</a>
   <a class="export-button ui-button">Export</a>
   <a class="import-button ui-button">Import</a>
   <a class="add-new-button ui-button">+</a>
@@ -168,6 +169,10 @@ document.querySelector('.import-button').addEventListener('click', function() {
   nodeManager.importData(json);
 });
 
+document.querySelector('.save-button').addEventListener('click', function() {
+  saveToLocalStorage();
+});
+
 
 var connectingLineCanvas = document.querySelector('.connecting-lines');
 var connectingLineCtx = connectingLineCanvas.getContext('2d');
@@ -223,6 +228,24 @@ editor.addEventListener('mousedown', function(e) {
     target = target.parentElement;
   }
 });
+
+function saveToLocalStorage() {
+  var data = nodeManager.exportData();
+  localStorage.setItem('savedState', data);
+}
+
+function loadFromLocalStorage() {
+  var data = localStorage.getItem('savedState');
+  if(data) {
+    nodeManager.importData(data);
+  }
+}
+
+setInterval(function() {
+  saveToLocalStorage();
+}, 15 * 1000);
+
+loadFromLocalStorage();
 
 
 </script>
