Replace CheckerNode with PatternNode
PatternNode can generate both checker and brick patterns.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <script src=src/SineNode.js></script>
 <script src=src/CircularSineNode.js></script>
 <script src=src/PolarNode.js></script>
-<script src=src/CheckerNode.js></script>
+<script src=src/PatternNode.js></script>
 <script src=src/SwirlNode.js></script>
 <script src=src/InvertNode.js></script>
 <script src=src/THREEPreviewNode.js></script>
@@ -56,7 +56,7 @@
   <ul class=node-classes-container>
     <li data-type=BlendNode>Blend</li>
     <li data-type=BlurNode>Blur</li>
-    <li data-type=CheckerNode>Checker</li>
+    <li data-type=PatternNode>Pattern</li>
     <li data-type=CircularGradientNode>CircularGradient</li>
     <li data-type=CircularSineNode>CircularSine</li>
     <li data-type=ColorNode>Color</li>
