Store value of nodes with custom params explicitly
Some nodes generate their output from custom UI, which means their
output needs to be stored in order to restore them.
This is now done explicitly rather than storing the output of all nodes
with no inputs, as that may lead to unexpected problems.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src=src/GradientValue.js></script>
 <script src=src/NodeManager.js></script>
 <script src=src/BaseNode.js></script>
+<script src=src/ValueNode.js></script>
 <script src=src/LoadStoreNode.js></script>
 <script src=src/ColorNode.js></script>
 <script src=src/CanvasNode.js></script>
