--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src=lib/jquery-gradient-picker/jquery.gradientPicker.js></script>
 <script src=lib/interact.js></script>
 <script src=lib/three.js></script>
+<script src=lib/TrackballControls.js></script>
 <script src=lib/perlin.js></script>
 <script src=lib/opencv.js></script>
 <script src=src/texturegen-core.js></script>
