Replace ColorNode with ColorInput
Colors are easy to copy-paste, so there it is probably more
user-friendly to use ColorInputs rather than ColorNodes for color input.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src=src/BaseInput.js></script>
 <script src=src/NumberInput.js></script>
 <script src=src/ChoiceInput.js></script>
+<script src=src/ColorInput.js></script>
 <script src=src/GraphInput.js></script>
 <script src=src/BaseValue.js></script>
 <script src=src/ColorValue.js></script>
@@ -25,7 +26,6 @@
 <script src=src/BaseNode.js></script>
 <script src=src/ValueNode.js></script>
 <script src=src/LoadStoreNode.js></script>
-<script src=src/ColorNode.js></script>
 <script src=src/CanvasNode.js></script>
 <script src=src/PerlinNode.js></script>
 <script src=src/GradientNode.js></script>
@@ -61,7 +61,6 @@
     <li data-type=PatternNode>Pattern</li>
     <li data-type=CircularGradientNode>CircularGradient</li>
     <li data-type=CircularSineNode>CircularSine</li>
-    <li data-type=ColorNode>Color</li>
     <li data-type=ColorizeNode>Colorize</li>
     <li data-type=DistortXNode>DistortX</li>
     <li data-type=EmbossNode>Emboss</li>
